--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "equation-editor-react": "^0.0.10",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.40.1",
     "react-bootstrap": "^2.0.1",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-chartjs-2": "^4.0.1",
