--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.0.1",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-chartjs-2": "^4.0.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-froala-wysiwyg": "^4.0.9",
     "react-hook-form": "^7.30.0",
