--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -13,6 +13,6 @@ jobs:
     steps:
        - run: remove-item -path C:\inetpub\wwwroot\CICD\build\LMSv3UI -force -recurse
        - run: mkdir C:\inetpub\wwwroot\CICD\build\LMSv3UI
-       - run: xcopy C:\inetpub\wwwroot\CICD\v3-dev\10.2-dev\LMSV3FRONTEND\LMSV3FRONTEND\build C:\inetpub\wwwroot\CICD\build\LMSv3UI /E /H /C /I
+       - run: xcopy C:\inetpub\wwwroot\CICD\LMS-Web\_work\LMSV3FRONTEND\LMSV3FRONTEND\build C:\inetpub\wwwroot\CICD\build\LMSv3UI /E /H /C /I
 
       
