--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react-bootstrap": "^2.0.1",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-chartjs-2": "^4.0.1",
-    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-froala-wysiwyg": "^4.0.9",
     "react-hook-form": "^7.30.0",
@@ -28,7 +27,8 @@
     "react-scripts": "4.0.3",
     "react-table-v6": "^6.8.6",
     "react-toastify": "^8.1.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.8/xlsx-0.18.8.tgz"
   },
   "scripts": {
     "start": "react-scripts start",
