--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-froala-wysiwyg": "^4.0.9",
     "react-hook-form": "^7.30.0",
+    "react-messenger-chat-plugin": "^3.0.5",
     "react-paginate": "^8.1.3",
     "react-player": "^2.10.0",
     "react-router-dom": "^5.3.0",
