--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "equation-editor-react": "^0.0.10",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-activity": "^2.1.3",
     "react-big-calendar": "^0.40.1",
     "react-bootstrap": "^2.0.1",
     "react-bootstrap-sweetalert": "^5.2.0",
